# scheduler

./: Cargo.toml  README.MD  README.md
examples/: callback_timer.rs  callback_timer_basic.rs  event_timer.rs  event_timer_cross_thread.rs  event_timer_multiple.rs
src/: error.rs  lib.rs  timer_trait.rs
src/callback/: mod.rs
src/event/: mod.rs
