[package]
name = "obsidian-scheduler"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Obsidian-Minecraft-Server-Portal/scheduler.git"
description = "A simple asyncronous scheduling system"


[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
lazy_static = "1.5.0"